--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -6,12 +6,16 @@
 \usepackage{parskip}
 \usepackage{pagecolor}
 \usepackage{url}
-
-
+\usepackage{fancyhdr} % for header
+%--preamble--%
+\fancyhead{} % clear all header fields
+\pagestyle{fancy} % for header
+\fancyhead[RO,LE]{浜村俊傑CV\ \ 更新日：2024年1月9日}
 \begin{document}
-\title{Curriculum Vitae}
-\date{2023年10月24日}
-\maketitle
+\begin{center}
+		{\LARGE \textbf{Curriculum Vitae}}\\~\\
+\end{center}
+\date{2024年01月09日}
 
 \noindent
 \section{氏名}
@@ -21,7 +25,7 @@ College of Education, Psychology, \& Social Work,\\
 Flinders University\\
 Sturt Rd, Bedford Park, South Australia 5042\\~\\
 \textbf{E-mailアドレス}\\
-toshitaka.hamamura[@]flinders.edu\\
+toshitaka.hamamura[@]flinders.edu.au\\
 hamamura[@]19.alumni.u-tokyo.ac.jp\\
 %thamamura[@]ncnp.go.jp\\
 
@@ -80,76 +84,84 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 
 \section{学位論文}
 	\begin{enumerate}
-		\item Hamamura, T.  (2010). The Role of Perfectionism, GPA Satisfaction, and Acculturation on Depression among International and Domestic Students. Trinity Western University Undergraduate Honor Thesis.
-		\item Hamamura, T. (2015). Depression and somatic symptoms in Japanese college students: Negative mood regulation expectancies and honne and tatemae as personality predictors. California State University, Fullerton Master Thesis.
 		\item 浜村\ 俊傑（2019）．Examining the Role of Expectancies and the Effect of Computer-delivered Interventions for Problem Drinking（問題飲酒における期待の役割の解明とコンピュータ介入の効果検証）　東京大学大学院教育学研究科総合研究科博士論文（未公刊）
+		\item Hamamura, T. (2015). Depression and somatic symptoms in Japanese college students: Negative mood regulation expectancies and honne and tatemae as personality predictors. California State University, Fullerton Master Thesis.
+		\item Hamamura, T.  (2010). The Role of Perfectionism, GPA Satisfaction, and Acculturation on Depression among International and Domestic Students. Trinity Western University Undergraduate Honor Thesis.
 	\end{enumerate}
 
 \section{学術論文（査読あり）}
 \begin{enumerate}
-	\item \underline{Hamamura, T.}, \& Laird, P.G. (2014) The effect of perfectionism and acculturative stress on levels of depression experienced by East Asian international students. \textit{Journal of Multicultural Counseling Development}, 42, 205-217. \url{https://doi.org/10.1002/j.2161-1912.2014.00055.x}
-	\item \underline{Hamamura, T.}, Suganuma, S., Ueda, M., Shimoyama, H., \& Mearns, J. (2018). Standalone effects of a cognitive behavioral intervention using a smartphone application on psychological distress and alcohol consumption among Japanese workers: A non-randomized controlled trial. \textit{JMIR Mental Health}, 5(1):e24. \url{http://doi.org/10.2196/mental.8984}
-	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018). The efficacy of a web-based screening and brief intervention for reducing alcohol consumption among Japanese problem drinkers: Protocol of a single-blind randomized controlled trial. \textit{JMIR Research Protocol}, 7(5):e10650.  \url{http://doi.org/10.2196/10650}
-	\item \underline{Hamamura, T.}, \& Mearns, J. (2019). Depression and somatic symptoms in Japanese and American college students: Negative mood regulation expectancies as a personality correlate. \textit{International Journal of Psychology}, 54(3), 351-359. \url{http://doi.org/10.1002/ijop.12467}
-	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. \textit{International Journal of Mental Health and Addiction}, 18, 195-205. \url{http://doi.org/10.1007/s11469-018-9991-8}
-	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (2021). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. \textit{Journal of Psychiatric Research}, 142, 218-225. \url{https://doi.org/10.1016/j.jpsychires.2021.07.054}
-	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. \textit{Translational Psychiatry}, 11, 573. \url{https://doi.org/10.1038/s41398-021-01696-x}
-	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2022). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. \textit{Addictive Behaviors Reports}, 15, 100400. \url{https://doi.org/10.1016/j.abrep.2021.100400}
+	\item King, D., Nogueira-López, A., Galanis, C., \underline{Hamamura, T.}, Bäcklund, C., Giardina, A., Billieux, J., \& Delfabbro, P. (in press). Reconsidering item response categories in gaming disorder symptoms measurement. \textit{Journal of Behavioral Addictions}.
+	\item Chiba, T., Ide, K., Murakami, M., Kobayashi, N., Oka, T., Nakai, F., Yorizawa, R., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Kanazawa, T., Boku, S., Kubo, T., Hishimoto, A., Kawato, M., \&  Cortese, A. (in press). Event-related PTSD symptoms as a high-risk factor for suicide--Longitudinal observational study. \textit{Nature Mental Health}.
+	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (2023). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. \textit{Addictive Behaviors}, 147, 107834. \url{https://doi.org/10.1016/j.addbeh.2023.107834}
+	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2023). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. \textit{BMC Psychology}, 11, 78. \url{https://doi.org/10.1186/s40359-023-01095-5}
 	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. \textit{Japanese Psychological Research}. \url{https://doi.org/10.1111/jpr.12408}
-	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2023). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. \textit{BMC Psychology}. \url{https://doi.org/10.31234/osf.io/2uzsd}
-	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (in press). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. \textit{Addictive Behaviors}. \url{https://doi.org/10.1016/j.addbeh.2023.107834}
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2022). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. \textit{Addictive Behaviors Reports}, 15, 100400. \url{https://doi.org/10.1016/j.abrep.2021.100400}
+	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. \textit{Translational Psychiatry}, 11, 573. \url{https://doi.org/10.1038/s41398-021-01696-x}
+	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (2021). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. \textit{Journal of Psychiatric Research}, 142, 218-225. \url{https://doi.org/10.1016/j.jpsychires.2021.07.054}
+	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. \textit{International Journal of Mental Health and Addiction}, 18, 195-205. \url{http://doi.org/10.1007/s11469-018-9991-8}
+	\item \underline{Hamamura, T.}, \& Mearns, J. (2019). Depression and somatic symptoms in Japanese and American college students: Negative mood regulation expectancies as a personality correlate. \textit{International Journal of Psychology}, 54(3), 351-359. \url{http://doi.org/10.1002/ijop.12467}
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018). The efficacy of a web-based screening and brief intervention for reducing alcohol consumption among Japanese problem drinkers: Protocol of a single-blind randomized controlled trial. \textit{JMIR Research Protocol}, 7(5):e10650.  \url{http://doi.org/10.2196/10650}
+	\item \underline{Hamamura, T.}, Suganuma, S., Ueda, M., Shimoyama, H., \& Mearns, J. (2018). Standalone effects of a cognitive behavioral intervention using a smartphone application on psychological distress and alcohol consumption among Japanese workers: A non-randomized controlled trial. \textit{JMIR Mental Health}, 5(1):e24. \url{http://doi.org/10.2196/mental.8984}
+	\item \underline{Hamamura, T.}, \& Laird, P.G. (2014) The effect of perfectionism and acculturative stress on levels of depression experienced by East Asian international students. \textit{Journal of Multicultural Counseling Development}, 42, 205-217. \url{https://doi.org/10.1002/j.2161-1912.2014.00055.x}
 \end{enumerate}
 
 \section{学術論文・プレプリント（査読なし）}
 \begin{enumerate}
-	\item 上田\ 翠・\underline{浜村\ 俊傑}・中村杏奈・下山晴彦(2017). 衝動性に関する遺伝環境交互作用−動物研究の応用可能性−\ 東京大学大学院教育学研究科臨床心理学コース紀要，40，22-29．
-	\item 内村\ 慶士・\underline{浜村\ 俊傑}・北原祐理・大賀真伊・鈴木拓朗・小林奈央・下山晴彦（2018）．ACT（アクセプタンス\&コミットメントセラピー）を用いたポピュレーションアプローチの可能性―well-beingの増進とその予防効果に着目して\ 東京大学大学院教育学研究科臨床心理学コース紀要，41，34-41．
-	\item 高堰\ 仁美・\underline{浜村\ 俊傑}・李智慧・下山晴彦（2019）. 慢性的虐待のリスクを抱え孤立状態にある母親への支援の現状と課題\ 東京大学大学院教育学研究科臨床心理学コース紀要，42，p.31-38
-	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. medRxiv. \url{https://doi.org/110.1101/2020.12.15.20246819}
-	\item Quaranta, T., \underline{Hamamura, T.}, \& Mearns, J. (2023, January 11). Correlates of Authoritarian versus Authoritative Parenting in the West and in Japan: Is This Dichotomy Valid in Japan?. OSF Preprints. \url{https://doi.org/10.31219/osf.io/g9ep7}
+	\item \underline{浜村\ 俊傑}（2023）．アルコール依存症に対するデジタル介入の現状\ 精神科治療学　第38巻増刊号．
+	\item Quaranta, T., \underline{Hamamura, T.}, \& Mearns, J. (2023). Correlates of Authoritarian versus Authoritative Parenting in the West and in Japan: Is This Dichotomy Valid in Japan?. \textit{OSF Preprints}. \url{https://doi.org/10.31219/osf.io/g9ep7}
+	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. \textit{medRxiv}. \url{https://doi.org/110.1101/2020.12.15.20246819}
+	\item \underline{浜村\ 俊傑}（2020）．書評：松本俊彦（著）「物質使用障害の治療」\ 精神療法，p.715
+	\item \underline{浜村\ 俊傑}（2019）．文献紹介：Panova \& Carbonell（著）「スマートフォン依存は果たして依存症なのか？(Is smartphone addiction really an addiction?)」\ 精神療法，p.602-603
+	\item 高堰\ 仁美・\underline{浜村\ 俊傑}・李\ 智慧・下山\ 晴彦（2019）. 慢性的虐待のリスクを抱え孤立状態にある母親への支援の現状と課題\ 東京大学大学院教育学研究科臨床心理学コース紀要，42，p.31-38．
+	\item 内村\ 慶士・\underline{浜村\ 俊傑}・北原\ 祐理・大賀\ 真伊・鈴木\ 拓朗・小林\ 奈央・下山\ 晴彦（2018）．ACT（アクセプタンス\&コミットメントセラピー）を用いたポピュレーションアプローチの可能性―well-beingの増進とその予防効果に着目して\ 東京大学大学院教育学研究科臨床心理学コース紀要，41，p.34-41．
+	\item 上田\ 翠・\underline{浜村\ 俊傑}・中村\ 杏奈・下山\ 晴彦(2017). 衝動性に関する遺伝環境交互作用−動物研究の応用可能性−\ 東京大学大学院教育学研究科臨床心理学コース紀要，40，p.22-29．
 \end{enumerate}
 
-\section{国際学会・シンポジウム等における発表}
+\subsection{国際学会（招待講演あり）}
 \begin{enumerate}
-	\item \underline{Hamamura, T.} (2010, June). \textit{The Role of Perfectionism, GPA Satisfaction, and Acculturation on Depression among International and Domestic Students} [Poster presentation]. Connecting Mind, an undergraduate research conference in psychology. Richmond, BC, Canada.
-	\item \underline{Hamamura, T.} \& Laird, P.G., (2013, June). \textit{Impact of Perfectionism and Acculturation on Levels of Depression Experienced by International Students} [Poster presentation]. International Association for Cross-Cultural Psychology, Los Angeles. (Poster)
-	\item \underline{Hamamura, T.}, \& Mearns, J. (2016, July). \textit{Depression and somatic symptoms in Japanese and American college students: negative mood regulation expectancies as a personality predictor} [Poster presentation]. The 31st International Congress of Psychology, Yokohama.
-	\item \underline{Hamamura, T.}, Mearns, J. (2018, June). \textit{Music mood induction alters negative alcohol expectancies among Japanese adults with problematic drinking: findings from an Internet Experiment} [Poster presentation]. The 41st Annual Research Society on Alcoholism Scientific Meeting, San Diego, USA.
-	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018, September). \textit{How effective is a brief website intervention with personalized normative feedback among Japanese adults with risky drinking? Findings from a pilot RCT.} In A. Takano \& T. Baba (Chair), Possibilities and challenges using e-health and m-health for addiction treatment. Symposium conducted at the meeting of at the 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
-	\item \underline{Hamamura, T.} (2018, September). \textit{Relationships among expectancies, drinking motivation and problem drinking among Japanese adults: The role of expectancies for negative mood regulation} [Poster presentation]. The 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
-	\item \underline{Hamamura, T.}, Kawai, K., Uchimura, Y., Suganuma, S., Sato, K., \& Shimoyama, H. (2019, March). \textit{Does a self-monitoring mobile app help reduction of problem drinking?: A pilot randomized controlled trial among Japanese problem drinkers} [Poster presentation]. International Congress of Psychological Science, Paris, France.
-	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., \& Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents} [Poster presentation]. 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.
-	\item Yasudomi, K., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A., \& Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction} [Paper presentation]. IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974
-	\item Yokoyama, C., Komazawa, A., Yahata, A., Miyamae, M., Kanie, A., \underline{Hamamura, T.}, \&, Ito, M. (2022, September). \textit{A Case Report of Positive Valence System-Focused Cognitive Behavioral Therapy Assisted by Virtual Reality for Postpartum Depression} [Poster presentation]. International Marc\'e Society for Perinatal Mental Health Biennial Meeting, London, U.K.
-	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Chiba, T., \& Honjo, M. (2023, August 23--25). \textit{Has problematic smartphone use changed between before and three years into the pandemic?} [Conference session]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
-	\item Kaneko, K., \underline{Hamamura, T.}, Fujisato, H., Király, O., Demetrovics, Z. \& Ito, M. (2023, August 23--25). \textit{Development and Validation of the Japanese Version of the Motives for Online Gaming Questionnaire} [Poster presentation]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
-	\item Furusawa, S., \underline{Hamamura, T.}, Yoneyama, A., Honjo, M., Kobayashi, N., Jitoku, D., Uchida, M. (2023, May 12--14). \textit{Visualization Methods to Support the Medical Treatment of the Problematic Use of Smartphones} [Oral presentation]. 2023 the 7th International Conference on Medical and Health Informatics (ICMHI), Kyoto, Japan.  \url{https://doi.org/10.1145/3608298.3608337}
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018). \textit{How effective is a brief website intervention with personalized normative feedback among Japanese adults with risky drinking? Findings from a pilot RCT.} In A. Takano \& T. Baba (Chair), Possibilities and challenges using e-health and m-health for addiction treatment. Symposium conducted at the meeting of at the 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
+\end{enumerate}
+\subsection{国際学会（招待講演なし）}
+\begin{enumerate}
+	\item Furusawa, S., \underline{Hamamura, T.}, Yoneyama, A., Honjo, M., Kobayashi, N., Jitoku, D., Uchida, M. (2023). \textit{Visualization Methods to Support the Medical Treatment of the Problematic Use of Smartphones} [Oral presentation]. 2023 the 7th International Conference on Medical and Health Informatics (ICMHI), Kyoto, Japan.  \url{https://doi.org/10.1145/3608298.3608337}
+	\item Kaneko, K., \underline{Hamamura, T.}, Fujisato, H., Király, O., Demetrovics, Z. \& Ito, M. (2023). \textit{Development and Validation of the Japanese Version of the Motives for Online Gaming Questionnaire} [Poster presentation]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
+	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Chiba, T., \& Honjo, M. (2023). \textit{Has problematic smartphone use changed between before and three years into the pandemic?} [Conference session]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
+	\item Yokoyama, C., Komazawa, A., Yahata, A., Miyamae, M., Kanie, A., \underline{Hamamura, T.}, \&, Ito, M. (2022). \textit{A Case Report of Positive Valence System-Focused Cognitive Behavioral Therapy Assisted by Virtual Reality for Postpartum Depression} [Poster presentation]. International Marc\'e Society for Perinatal Mental Health Biennial Meeting, London, U.K.
+	\item Yasudomi, K., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A., \& Uchida, M. (2021). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction} [Paper presentation]. IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974
+	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., \& Honjo, M. (2020). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents} [Poster presentation]. 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.A.
+	\item \underline{Hamamura, T.}, Kawai, K., Uchimura, Y., Suganuma, S., Sato, K., \& Shimoyama, H. (2019). \textit{Does a self-monitoring mobile app help reduction of problem drinking?: A pilot randomized controlled trial among Japanese problem drinkers} [Poster presentation]. International Congress of Psychological Science, Paris, France.
+	\item \underline{Hamamura, T.} (2018). \textit{Relationships among expectancies, drinking motivation and problem drinking among Japanese adults: The role of expectancies for negative mood regulation} [Poster presentation]. The 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
+	\item \underline{Hamamura, T.}, Mearns, J. (2018). \textit{Music mood induction alters negative alcohol expectancies among Japanese adults with problematic drinking: findings from an Internet Experiment} [Poster presentation]. The 41st Annual Research Society on Alcoholism Scientific Meeting, San Diego, U.S.A.
+	\item \underline{Hamamura, T.}, \& Mearns, J. (2016). \textit{Depression and somatic symptoms in Japanese and American college students: negative mood regulation expectancies as a personality predictor} [Poster presentation]. The 31st International Congress of Psychology, Yokohama.
+	\item \underline{Hamamura, T.} \& Laird, P.G., (2013). \textit{Impact of Perfectionism and Acculturation on Levels of Depression Experienced by International Students} [Poster presentation]. International Association for Cross-Cultural Psychology, Los Angeles, U.S.A. (Poster)
+	\item \underline{Hamamura, T.} (2010). \textit{The Role of Perfectionism, GPA Satisfaction, and Acculturation on Depression among International and Domestic Students} [Poster presentation]. Connecting Mind, an undergraduate research conference in psychology. Richmond, Canada.
 \end{enumerate}
 
-\section{国内学会・シンポジウム等における発表}
+\section{国内学会・シンポジウム等における発表（招待講演なし）}
 \begin{enumerate}
-	\item \underline{浜村\ 俊傑}・中村\ 杏奈・吉田\ 成朗・マーンズ，J.・下山\ 晴彦（2017）．VR表情フィードバック装置が情動・自伝的記憶に及ぼす影響——ネガティブ気分制御期待感に着目して——日本心理学会第81回大会発表論文集，278. （ポスター）
-	\item \underline{浜村\ 俊傑}・菅沼\ 慎一郎・上田\ 麻実・下山\ 晴彦（2017）．セルフモニタリングアプリが与える飲酒量・日常ストレスへの効果．第39回日本アルコール関連問題学会，東京．（ポスター）
-	\item \underline{浜村\ 俊傑}（2018）.アルコール依存傾向を説明する飲酒量と飲酒期待の役割．日本心理学会第82回大会発表論文集，880.（ポスター）
-	\item \underline{浜村\ 俊傑}・本庄\ 勝・黒川\ 雅幸・三島\ 浩路・小西\ 達也・永田\ 雅俊・米山\ 暁夫（2019）.インターネット依存傾向タイプは中高生のスマートフォン利用を予測するか？―質問紙とログデータによる検証―．日本心理学会第83回大会発表論文集.（ポスター）
-	\item 安\ 婷婷・\underline{浜村\ 俊傑}・岸本\ 鵬子・マーンズジャック（2019）.中国人留学生における学校ストレスと異文化適応ストレスの抑うつと不安への影響：ネガティブ気分制御期待感の調整効果．日本心理学会第83回大会発表論文集.（ポスター）
-	\item\underline{浜村\ 俊傑}・本庄\ 勝・黒川\ 雅幸・三島\ 浩路・小西\ 達也・永田\ 雅俊・米山\ 暁夫(2019).中高生を対象としたスマホ依存介入アプリの効果検証ーログデータを用いた簡易的ランダム化比較試験－．2019年度アルコール・薬物依存関連学会合同学術総会．179．（口頭）
-	\item 三島\ 浩路・黒川\ 雅幸・永田\ 雅俊・小西\ 達也・\underline{浜村\ 俊傑}・本庄\ 勝・米山\ 暁夫（2020年3月）．日常生活に関する主観的評価と個人特性によるスマートフォン依存傾向の違い　2020年電子情報通信学会総合大会　41-45．　
-	\item \underline{浜村\ 俊傑}・マーンズ，J.（2020年9月）．飲むなら独りか仲間とか？——高齢者の多量飲酒に着目して——．日本心理学会第84回大会.（デジタルポスター）
-	\item 黒川\ 雅幸・三島\ 浩路・\underline{浜村\ 俊傑}・小西\ 達也・永田\ 雅俊・本庄\ 勝・米山\ 暁夫（2020年9月）．	スマートフォン利用によるインターネット依存傾向尺度（短縮版）の検討．日本心理学会第84回大会.（ポスター）
-	\item \underline{浜村\ 俊傑}（2020年10月）スマホ依存の定義とメンタルヘルスとの関連	\underline{浜村\ 俊傑}（企画代表者）スマートフォン依存の現状と対策を考える：教育，医療，産業の	観点から日本心理学会第84回大会.（公募シンポジウム，口頭）
-	\item \underline{浜村\ 俊傑}・小林\ 直・本庄\ 勝・三宅\ 佑果・千葉\ 俊周・川島\ 一朔・酒井\ 雄希・田中\ 沙織・米山\ 暁夫（2020年11月）．スマホ依存は長時間のスマホ利用とどのように異	なるの	か？——性格指標や生活実態における比較から——　第55回日本アルコール・アディクション医学会学術総会（口頭）
-	\item 小林\ 直・三宅\ 佑果・畑川\ 養幸・\underline{浜村\ 俊傑}・本庄\ 勝・田中\ 沙織（2021年3月10日）．スマートフォン嗜癖の実態把握ならびに検知に関する検討．2021年電子情報通信学会総合大会（口頭）
-	\item 三宅\ 佑果・小林\ 直・畑川\ 養幸・\underline{浜村\ 俊傑}・本庄\ 勝（2021年3月10日）．スマートフォン嗜癖とコーピングの関係に関する一考察．2021年電子情報通信学会総合大会（口頭）
-	\item 池田\ 直樹・\underline{浜村\ 俊傑}・本庄\ 勝・米山\ 暁夫・小林\ 七彩・中島\ 涼子・治徳\ 大介（2021年3月10日）．スマートフォン嗜癖診断システム開発に向けた臨床現場でのスマートフォン利用ログ分析．2021年電子情報通信学会総合大会（口頭）
-	\item 小林\ 直・三宅\ 佑果・畑川\ 養幸・\underline{浜村\ 俊傑}・本庄\ 勝・岡\ 大樹・千葉\ 俊周（2021年3月15日）．新型コロナウィルス感染症流行におけるスマートフォンの利用実態ならびにスマートフォン嗜癖の検知．電子情報通信学会技術研究報，1 - 5（口頭）
-	\item \underline{浜村\ 俊傑}・小林\ 直・本庄\ 勝・三宅\ 佑果・千葉\ 俊周・米山\ 暁夫（2020年11月）．スマホ依存は長時間のスマホ利用とどのように異なるのか？——性格指標や生活実態における比較から——　第55回日本アルコール・アディクション医学会学術総会（口頭）
-	\item \underline{浜村\ 俊傑}・小林\ 直 ・三宅\ 佑果・ 岡\ 大樹・千葉\ 俊周・本庄\ 勝・米山\ 暁夫（2021年9月8日～11月2日）．スマートフォン嗜癖はパンデミックにおいて変化しているのか——感染拡大前からの縦断調査——　日本心理学会第85回大会.（デジタルポスター）
-	\item \underline{浜村\ 俊傑}・本庄\ 勝・北村\ 美穂・浅野\ 昭祐・本庄\ 勝・米山\ 暁夫（2021年12月18日）．デジタル介入によるスマートフォンの問題利用への予防：子どもと保護者のための介入アプリの開発と予備実験　2021年度日本アルコール・アディクション医学会学術総会（口頭）
-	\item 小林\ 七彩・治徳\ 大介・中島\ 涼子・\underline{浜村\ 俊傑}・本庄\ 勝・杉原\ 玄一・高橋\ 英彦（2022年9月9日）．ネット・ゲームの問題を抱える患者と骨密度との関連．2022年度日本アルコール・アディクション医学会学術総会（口頭）
-	\item \underline{浜村\ 俊傑}・小林\ 七彩・治徳\ 大介・中島\ 涼子・高橋\ 英彦・本庄\ 勝（2022年9月9日）．スマートフォン問題使用の客観的測定にむけて：臨床データを用いた実態把握．2022年度日本アルコール・アディクション医学会学術総会（口頭）
-	\item \underline{浜村\ 俊傑}・金子\ 響介・伊藤\ 正哉（2022年11月11日）．児童・青年におけるゲーム行動症の内在化症状および家族機能との関連．第22回日本認知療法・認知行動療法学会．（口頭）
-	\item 大野\ 昴紀・徳重\ 誠・平谷\ 七美・金子\ 響介・\underline{浜村\ 俊傑}・宮本\ 有紀・館農\ 勝・藤里\ 紘子・伊藤\ 正哉・高野\ 歩（2023年10月15日）．日本語版 Internet Gaming Disorder Scale for Children (IGDS-C) の信頼性と妥当性の検証．2023年度日本アルコール・アディクション医学会学術総会（口頭）
+	\item 大野\ 昴紀・徳重\ 誠・平谷\ 七美・金子\ 響介・\underline{浜村\ 俊傑}・宮本\ 有紀・館農\ 勝・藤里\ 紘子・伊藤\ 正哉・高野\ 歩（2023）．日本語版 Internet Gaming Disorder Scale for Children (IGDS-C) の信頼性と妥当性の検証．2023年度日本アルコール・アディクション医学会学術総会，岡山（口頭）
+	\item \underline{浜村\ 俊傑}・金子\ 響介・伊藤\ 正哉（2022）．児童・青年におけるゲーム行動症の内在化症状および家族機能との関連．第22回日本認知療法・認知行動療法学会，千代田．（口頭）
+	\item \underline{浜村\ 俊傑}・小林\ 七彩・治徳\ 大介・中島\ 涼子・高橋\ 英彦・本庄\ 勝（2022）．スマートフォン問題使用の客観的測定にむけて：臨床データを用いた実態把握．2022年度日本アルコール・アディクション医学会学術総会，宮城（口頭）
+	\item 小林\ 七彩・治徳\ 大介・中島\ 涼子・\underline{浜村\ 俊傑}・本庄\ 勝・杉原\ 玄一・高橋\ 英彦（2022）．ネット・ゲームの問題を抱える患者と骨密度との関連．2022年度日本アルコール・アディクション医学会学術総会，仙台（口頭）
+	\item \underline{浜村\ 俊傑}・本庄\ 勝・北村\ 美穂・浅野\ 昭祐・本庄\ 勝・米山\ 暁夫（2021）．デジタル介入によるスマートフォンの問題利用への予防：子どもと保護者のための介入アプリの開発と予備実験　2021年度日本アルコール・アディクション医学会学術総会，オンライン（口頭）
+	\item \underline{浜村\ 俊傑}・小林\ 直 ・三宅\ 佑果・ 岡\ 大樹・千葉\ 俊周・本庄\ 勝・米山\ 暁夫（2021）．スマートフォン嗜癖はパンデミックにおいて変化しているのか——感染拡大前からの縦断調査——　日本心理学会第85回大会，オンライン.（デジタルポスター）
+	\item 小林\ 直・三宅\ 佑果・畑川\ 養幸・\underline{浜村\ 俊傑}・本庄\ 勝・岡\ 大樹・千葉\ 俊周（2021）．新型コロナウィルス感染症流行におけるスマートフォンの利用実態ならびにスマートフォン嗜癖の検知．電子情報通信学会技術研究報，1 - 5，オンライン（口頭）
+	\item 池田\ 直樹・\underline{浜村\ 俊傑}・本庄\ 勝・米山\ 暁夫・小林\ 七彩・中島\ 涼子・治徳\ 大介（2021）．スマートフォン嗜癖診断システム開発に向けた臨床現場でのスマートフォン利用ログ分析．2021年電子情報通信学会総合大会，オンライン（口頭）
+	\item 三宅\ 佑果・小林\ 直・畑川\ 養幸・\underline{浜村\ 俊傑}・本庄\ 勝（2021）．スマートフォン嗜癖とコーピングの関係に関する一考察，オンライン．2021年電子情報通信学会総合大会，オンライン（口頭）
+	\item 小林\ 直・三宅\ 佑果・畑川\ 養幸・\underline{浜村\ 俊傑}・本庄\ 勝・田中\ 沙織（2021）．スマートフォン嗜癖の実態把握ならびに検知に関する検討．2021年電子情報通信学会総合大会，オンライン（口頭）
+	\item \underline{浜村\ 俊傑}・小林\ 直・本庄\ 勝・三宅\ 佑果・千葉\ 俊周・米山\ 暁夫（2020）．スマホ依存は長時間のスマホ利用とどのように異なるのか？——性格指標や生活実態における比較から——　第55回日本アルコール・アディクション医学会学術総会，オンライン（口頭）
+	\item \underline{浜村\ 俊傑}・小林\ 直・本庄\ 勝・三宅\ 佑果・千葉\ 俊周・川島\ 一朔・酒井\ 雄希・田中\ 沙織・米山\ 暁夫（2020）．スマホ依存は長時間のスマホ利用とどのように異なるの	か？——性格指標や生活実態における比較から——　第55回日本アルコール・アディクション医学会学術総会，オンライン（口頭）
+	\item \underline{浜村\ 俊傑}（2020）スマホ依存の定義とメンタルヘルスとの関連	\underline{浜村\ 俊傑}（企画代表者）スマートフォン依存の現状と対策を考える：教育，医療，産業の	観点から日本心理学会第84回大会，オンライン.（公募シンポジウム，口頭）
+	\item 黒川\ 雅幸・三島\ 浩路・\underline{浜村\ 俊傑}・小西\ 達也・永田\ 雅俊・本庄\ 勝・米山\ 暁夫（2020）．	スマートフォン利用によるインターネット依存傾向尺度（短縮版）の検討．日本心理学会第84回大会，オンライン.（ポスター）
+	\item \underline{浜村\ 俊傑}・マーンズ，J.（2020）．飲むなら独りか仲間とか？——高齢者の多量飲酒に着目して——．日本心理学会第84回大会，オンライン.（デジタルポスター）
+	\item 三島\ 浩路・黒川\ 雅幸・永田\ 雅俊・小西\ 達也・\underline{浜村\ 俊傑}・本庄\ 勝・米山\ 暁夫（2020年3月）．日常生活に関する主観的評価と個人特性によるスマートフォン依存傾向の違い　2020年電子情報通信学会総合大会，p41-45，オンライン．　
+	\item\underline{浜村\ 俊傑}・本庄\ 勝・黒川\ 雅幸・三島\ 浩路・小西\ 達也・永田\ 雅俊・米山\ 暁夫(2019)．中高生を対象としたスマホ依存介入アプリの効果検証ーログデータを用いた簡易的ランダム化比較試験－．2019年度アルコール・薬物依存関連学会合同学術総会．179，札幌．（口頭）
+	\item 安\ 婷婷・\underline{浜村\ 俊傑}・岸本\ 鵬子・マーンズ，J．（2019）．中国人留学生における学校ストレスと異文化適応ストレスの抑うつと不安への影響：ネガティブ気分制御期待感の調整効果．日本心理学会第83回大会発表論文集，仙台.（ポスター）
+	\item \underline{浜村\ 俊傑}・本庄\ 勝・黒川\ 雅幸・三島\ 浩路・小西\ 達也・永田\ 雅俊・米山\ 暁夫（2019）.インターネット依存傾向タイプは中高生のスマートフォン利用を予測するか？―質問紙とログデータによる検証―．日本心理学会第83回大会発表論文集，茨木.（ポスター）
+	\item \underline{浜村\ 俊傑}（2018）.アルコール依存傾向を説明する飲酒量と飲酒期待の役割．日本心理学会第82回大会発表論文集，880，仙台.（ポスター）
+	\item \underline{浜村\ 俊傑}・菅沼\ 慎一郎・上田\ 麻実・下山\ 晴彦（2017）．セルフモニタリングアプリが与える飲酒量・日常ストレスへの効果．第39回日本アルコール関連問題学会，横浜．（ポスター）
+	\item \underline{浜村\ 俊傑}・中村\ 杏奈・吉田\ 成朗・マーンズ，J.・下山\ 晴彦（2017）．VR表情フィードバック装置が情動・自伝的記憶に及ぼす影響——ネガティブ気分制御期待感に着目して——日本心理学会第81回大会発表論文集，278，久留米. （ポスター）
 \end{enumerate}
 
 \section{学術雑誌等又は商業誌における解説，総説}
